# task2_lerobot_act_calvin

./: .gitignore  =0.24.1  README.md  pyproject.toml  requirements-no-torch.txt  requirements.txt
configs/: base_act.yaml  eval_ABC_on_D.yaml  eval_A_on_D.yaml  train_ABC.yaml  train_A_only.yaml
outputs/eval/act_ABC_seed42_on_D/: chunk_horizon_metrics.csv  config_snapshot.yaml  episode_metrics.csv  metrics.json  task_metrics.csv
outputs/eval/act_ABC_seed43_on_D/: chunk_horizon_metrics.csv  config_snapshot.yaml  episode_metrics.csv  metrics.json  task_metrics.csv
outputs/eval/act_ABC_seed44_on_D/: chunk_horizon_metrics.csv  episode_metrics.csv  (+3 more)
outputs/figures/: task_wise_delta.csv
report_assets/result_tables/: multiseed_chunk_horizon_metrics.csv  multiseed_episode_distribution_metrics.csv  multiseed_episode_distribution_metrics.md  multiseed_per_seed_metrics.csv  multiseed_summary_metrics.csv  multiseed_summary_metrics.md  multiseed_task_metrics.csv  multiseed_task_metrics.md
scripts/: 00_check_env.py  01_inspect_calvin.py  02_prepare_dataset.py  03_train_act.py  04_eval_on_D.py  05_collect_metrics.py  06_plot_results.py  07_make_report_assets.py  08_final_audit.py  09_plot_d_diagnostics.py  10_collect_multiseed_metrics.py  benchmark_calvin_v21_act_loader.py  check_fair_comparison.py  download_hf_split_with_curl.py  run_multiseed_4gpu.sh  run_multiseed_eval_4gpu.sh
src/: __init__.py  calvin_data.py  calvin_v21_act_dataset.py  config.py  eval_utils.py  lerobot_bridge.py  metrics.py  paths.py  plotting.py  train_utils.py  wandb_utils.py
wandb/wandb/: latest-run
(+139 files in other folders)
