[project]
name = "task2-lerobot-act-calvin"
version = "0.1.0"
description = "Course experiment scaffold for LeRobot ACT cross-environment generalization on CALVIN."
requires-python = ">=3.12"
readme = "README.md"

[tool.setuptools]
packages = ["src"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["."]
